--- a/app/src/main/res/layout/direct_message_item.xml
+++ b/app/src/main/res/layout/direct_message_item.xml
@@ -31,6 +31,7 @@
                 fresco:actualImageScaleType="fitXY"
                 android:layout_gravity="center"
                 fresco:roundedCornerRadius="5dp"
+                android:id="@+id/direct_message_sender_profile_image"
                 fresco:placeholderImage="@drawable/woman2"
                 fresco:placeholderImageScaleType="fitXY"/>
 
@@ -63,10 +64,10 @@
                 android:ellipsize="end"
                 android:fontFamily="@font/airreg"
                 android:maxLines="2"
-                android:lineSpacingExtra="6dp"
+                android:lineSpacingExtra="4dp"
                 android:text="Also send files to yourself just select your own name from the owner fo the file then"
                 android:textColor="#969595"
-                android:textSize="17dp" />
+                android:textSize="18dp" />
         </LinearLayout>
 
         <LinearLayout
