--- a/app/src/main/res/layout/activity_main_content.xml
+++ b/app/src/main/res/layout/activity_main_content.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
+    android:id="@+id/activity_main_main_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -11,9 +12,9 @@
         android:orientation="vertical">
 
         <androidx.appcompat.widget.Toolbar
-            android:id="@+id/starting_soon_more_toolbar"
+            android:id="@+id/activity_main_toolbar"
             android:layout_width="match_parent"
-            android:layout_height="60dp"
+            android:layout_height="80dp"
             android:background="@color/colorPrimary">
 
             <LinearLayout
@@ -32,7 +33,7 @@
                         android:layout_width="40dp"
                         android:layout_height="40dp"
                         android:padding="10dp"
-                        android:layout_gravity="center"
+                        android:layout_gravity="center|bottom"
                         android:tint="@color/white"
                         android:src="@drawable/newsearchicon"/>
                 </LinearLayout>
@@ -41,13 +42,13 @@
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_weight="3"
-                    android:gravity="bottom|center"
+                    android:gravity="center|bottom"
                     android:layout_marginTop="10dp"
                     android:layout_height="match_parent">
 
                     <TextView
                         android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
                         android:layout_alignParentLeft="true"
                         android:layout_marginBottom="5dp"
                         android:fontFamily="@font/airsemi"
@@ -70,7 +71,7 @@
                         android:layout_width="35dp"
                         android:layout_height="35dp"
                         fresco:actualImageScaleType="fitXY"
-                        android:layout_gravity="center"
+                        android:layout_gravity="center|bottom"
                         fresco:roundedCornerRadius="5dp"
                         fresco:roundAsCircle="true"
                         android:id="@+id/activity_main_user_profile_profile_image"
@@ -97,6 +98,8 @@
                 android:orientation="vertical"
                 android:background="@color/white"
                 android:layout_gravity="bottom"
+                android:paddingBottom="50dp"
+                android:id="@+id/bottomnav_root_layout"
                 android:layout_alignParentBottom="true">
 
                 <View
