--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -1,23 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/learn"
         android:icon="@drawable/specialization"
         android:title="Learn"/>
+
     <item
-        android:id="@+id/my_courses"
-        android:icon="@drawable/newbookicon"
-        android:title="My Courses"/>
+        android:id="@+id/channel"
+        android:icon="@drawable/tv_2x"
+        android:title="Channels"/>
     <item
         android:id="@+id/explore"
         android:icon="@drawable/newexploreicon"
         android:title="Explore"/>
     <item
-        android:id="@+id/channel"
-        android:icon="@drawable/tv_2x"
-        android:title="Channels"/>
+        android:id="@+id/my_dm"
+        android:icon="@drawable/chat_bubbles_2x"
+        android:title="DM"/>
     <item
         android:id="@+id/notification"
         android:icon="@drawable/bell_2x"
