--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,13 +22,22 @@
 
     <style name="Widget.BottomNavigationStyle" parent="@style/Widget.MaterialComponents.BottomNavigationView">
         <item name="itemTextAppearanceActive">@style/BottomNavigationTextStyle</item>
-        <item name="itemTextAppearanceInactive">@style/BottomNavigationTextStyle</item>
+        <item name="itemTextAppearanceInactive">@style/BottomNavigationTextStyleInactive</item>
     </style>
 
     <style name="BottomNavigationTextStyle" parent="TextAppearance.MaterialComponents.Caption">
         <item name="android:textSize">13dp</item>
+        <item name="fontFamily">@font/airsemi</item>
+        <item name="android:padding">0dp</item>
+        <item name="android:layout_margin">0dp</item>
+        <item name="android:textColor">@color/colorPrimary</item>
+    </style>
+
+    <style name="BottomNavigationTextStyleInactive" parent="TextAppearance.MaterialComponents.Caption">
+        <item name="android:textSize">12dp</item>
         <item name="fontFamily">@font/airreg</item>
         <item name="android:padding">0dp</item>
+        <item name="android:textColor">@color/light_text_color</item>
         <item name="android:layout_margin">0dp</item>
     </style>
 
