channel video player Impl

--- a/app/src/main/res/drawable/activity_main_drawer_background.xml
+++ b/app/src/main/res/drawable/activity_main_drawer_background.xml
@@ -3,11 +3,9 @@
 <shape android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
 
     <solid
-        android:color="#F7F7F7"/>
-    <corners
-        android:topLeftRadius="30dp"
-        android:bottomLeftRadius="30dp">
+        android:color="#ffffff"/>
 
-    </corners>
+
+
 
 </shape>
