--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,11 +13,11 @@
     <include layout="@layout/activity_main_content"/>
 
     <com.google.android.material.navigation.NavigationView
-      android:layout_width="300dp"
+      android:layout_width="250dp"
       android:id="@+id/activity_main_profile_nav_view"
       android:layout_height="match_parent"
       android:background="@drawable/activity_main_drawer_background"
-      android:layout_gravity="en">
+      android:layout_gravity="end">
 
       <LinearLayout
           android:layout_width="match_parent"
@@ -58,6 +58,19 @@
                           fresco:roundedCornerRadius="5dp" />
                   </LinearLayout>
 
+                  <TextView
+                      android:layout_width="250dp"
+                      android:layout_height="match_parent"
+                      android:layout_marginLeft="20dp"
+                      android:fontFamily="@font/airsemi"
+                      android:gravity="center|left"
+                      android:layout_marginTop="10dp"
+                      android:maxLines="2"
+                      android:ellipsize="end"
+                      android:text="Damilola Akinterinwa"
+                      android:textColor="@color/black"
+                      android:textSize="18dp" />
+
 
                   <LinearLayout
                       android:id="@+id/activity_main_drawer_user_profile_layout"
@@ -84,7 +97,7 @@
                           android:gravity="center|left"
                           android:text="Profile"
                           android:textColor="@color/black"
-                          android:textSize="19dp" />
+                          android:textSize="18dp" />
                   </LinearLayout>
 
                   <LinearLayout
@@ -97,7 +110,7 @@
                       android:orientation="horizontal">
 
                       <ImageView
-                          android:layout_width="23dp"
+                          android:layout_width="22dp"
                           android:layout_height="23dp"
                           android:src="@drawable/download_2_2x"
                           android:tint="#201D1D" />
@@ -111,7 +124,7 @@
                           android:gravity="center|left"
                           android:text="Downloads"
                           android:textColor="@color/black"
-                          android:textSize="19dp" />
+                          android:textSize="18dp" />
                   </LinearLayout>
 
                   <LinearLayout
@@ -124,7 +137,7 @@
                       android:orientation="horizontal">
 
                       <ImageView
-                          android:layout_width="25dp"
+                          android:layout_width="23dp"
                           android:layout_height="25dp"
                           android:src="@drawable/newbookicon"
                           android:tint="#201D1D" />
@@ -138,7 +151,7 @@
                           android:gravity="center|left"
                           android:text="My Courses"
                           android:textColor="@color/black"
-                          android:textSize="19dp" />
+                          android:textSize="18dp" />
                   </LinearLayout>
 
                   <LinearLayout
@@ -154,7 +167,8 @@
                           android:layout_width="21dp"
                           android:layout_height="21dp"
                           android:src="@drawable/dollar_coin_2x"
-                          android:tint="#201D1D" />
+                          android:tint="#201D1D"
+                          android:padding="1dp"/>
 
 
                       <TextView
@@ -165,11 +179,11 @@
                           android:gravity="center|left"
                           android:text="My Subscriptions"
                           android:textColor="@color/black"
-                          android:textSize="19dp" />
+                          android:textSize="18dp" />
                   </LinearLayout>
 
                   <View
-                      android:layout_width="match_parent"
+                      android:layout_width="250dp"
                       android:layout_height="0.5dp"
                       android:layout_marginTop="10dp"
                       android:layout_marginBottom="10dp"
@@ -201,7 +215,7 @@
                           android:gravity="center|left"
                           android:text="Settings"
                           android:textColor="@color/black"
-                          android:textSize="19dp" />
+                          android:textSize="18dp" />
                   </LinearLayout>
 
                   <LinearLayout
@@ -228,7 +242,7 @@
                           android:gravity="center|left"
                           android:text="Invite a friend"
                           android:textColor="@color/black"
-                          android:textSize="19dp" />
+                          android:textSize="18dp" />
                   </LinearLayout>
 
                   <LinearLayout
@@ -243,7 +257,6 @@
                       <ImageView
                           android:layout_width="20dp"
                           android:layout_height="20dp"
-                          android:padding="1dp"
                           android:src="@drawable/info_2x"
                           android:tint="#201D1D" />
 
@@ -256,7 +269,7 @@
                           android:gravity="center|left"
                           android:text="Help"
                           android:textColor="@color/black"
-                          android:textSize="19dp" />
+                          android:textSize="18dp" />
                   </LinearLayout>
 
                   <LinearLayout
@@ -283,7 +296,7 @@
                           android:gravity="center|left"
                           android:text="Logout"
                           android:textColor="@color/black"
-                          android:textSize="19dp" />
+                          android:textSize="18dp" />
                   </LinearLayout>
               </LinearLayout>
 
