--- a/app/src/main/res/layout/fragment_notification.xml
+++ b/app/src/main/res/layout/fragment_notification.xml
@@ -4,13 +4,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#c8c8c8"
+    android:background="@color/white"
     tools:context=".Fragments.NotificationFragment">
 
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
-       tools:listitem="@layout/notification_item_type_like_share_mention_post"
+       android:layout_marginBottom="55dp"
+       tools:listitem="@layout/notification_item_type_mentions"
        android:id="@+id/notification_recyclerview">
 
    </androidx.recyclerview.widget.RecyclerView>
