--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -16,7 +16,7 @@
     <item
         android:id="@+id/my_dm"
         android:icon="@drawable/chat_bubbles_2x"
-        android:title="DM"/>
+        android:title="DMs"/>
     <item
         android:id="@+id/notification"
         android:icon="@drawable/bell_2x"
