--- a/app/src/main/res/layout/activity_channel_base.xml
+++ b/app/src/main/res/layout/activity_channel_base.xml
@@ -5,10 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:id="@+id/channel_base_root"
-    android:layerType="hardware"
-    android:fitsSystemWindows="true"
-    android:background="@color/white">
+    android:id="@+id/channel_base_root">
 
 
     <include layout="@layout/mention_selection_layout"/>
@@ -20,7 +17,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="@color/white">
 
 
 <androidx.appcompat.widget.Toolbar
@@ -102,6 +100,7 @@
             android:layout_height="match_parent"
             android:id="@+id/channel_post_recyclerview"
             android:nestedScrollingEnabled="false"
+            android:background="@color/white"
             tools:listitem="@layout/channel_post_recyler_item">
         </androidx.recyclerview.widget.RecyclerView>
 
