--- a/app/src/main/res/layout/activity_main_content.xml
+++ b/app/src/main/res/layout/activity_main_content.xml
@@ -15,13 +15,17 @@
             android:id="@+id/activity_main_toolbar"
             android:layout_width="match_parent"
             android:layout_height="80dp"
+            app:contentInsetLeft="0dp"
+            app:contentInsetStart="0dp"
+            app:contentInsetRight="0dp"
+            app:contentInsetEnd="0dp"
             android:background="@color/colorPrimary">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="bottom"
-                android:layout_gravity="bottom"
+                android:layout_height="80dp"
+                android:paddingBottom="10dp"
+                android:id="@+id/activity_main_toolbar_overlay"
                 android:weightSum="5">
 
                 <LinearLayout
