--- a/app/src/main/res/layout/explore_community_recyclerview_type3_bucket.xml
+++ b/app/src/main/res/layout/explore_community_recyclerview_type3_bucket.xml
@@ -8,8 +8,8 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="530dp"
-        app:cardElevation="1dp">
+        android:layout_height="520dp"
+        app:cardElevation="0dp">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -23,46 +23,33 @@
                 android:orientation="horizontal"
                 android:weightSum="4">
 
-                <LinearLayout
+                <TextView
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:orientation="horizontal"
-                    android:layout_weight="3">
-                    <ImageView
-                        android:layout_width="20dp"
-                        android:layout_height="20dp"
-                        android:layout_gravity="center"
-                        android:tint="@color/pinkypinky"
-                        android:layout_marginRight="5dp"
-                        android:src="@drawable/podcasts_2_2x"/>
+                    android:layout_weight="3"
+                    android:textSize="17dp"
+                    android:maxLines="1"
+                    android:ellipsize="end"
+                    android:layout_marginRight="20dp"
+                    android:textColor="@color/black"
+                    android:fontFamily="@font/sourcesemi"
+                    android:text="Making the Best Career Choices"
+                    android:gravity="center|left"/>
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_weight="3"
-                        android:textSize="16dp"
-                        android:maxLines="1"
-                        android:ellipsize="end"
-                        android:layout_marginRight="20dp"
-                        android:textColor="@color/dark_text_color"
-                        android:fontFamily="@font/airsemi"
-                        android:text="CareerWise"
-                        android:gravity="center|left"/>
-                </LinearLayout>
                 <LinearLayout
                     android:layout_width="0dp"
-                    android:layout_height="35dp"
+                    android:layout_height="30dp"
                     android:background="@drawable/rectangle_transparent_background"
                     android:orientation="vertical"
                     android:gravity="center"
-                    android:layout_marginTop="5dp"
+                    android:layout_marginTop="8dp"
                     android:layout_weight="1">
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:text="Show all"
                         android:textSize="13dp"
-                        android:textColor="@color/new_dark_text_color"
+                        android:textColor="@color/dark_text_color"
                         android:gravity="center"/>
 
                 </LinearLayout>
@@ -71,6 +58,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 app:spanCount="2"
+                android:id="@+id/explore_community_type3_recyclerview"
                 app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                 tools:listitem="@layout/explore_community_recyclerview_type3_item"
                 android:layout_marginBottom="5dp"/>
