--- a/app/src/main/res/layout/fragment_explore_community.xml
+++ b/app/src/main/res/layout/fragment_explore_community.xml
@@ -1,30 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@color/white"
-    android:layout_marginBottom="55dp"
-    tools:context=".Fragments.ExploreCommunity">
-    <LinearLayout
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginBottom="65dp"
+        android:background="@color/white"
         android:orientation="vertical">
-        <androidx.recyclerview.widget.RecyclerView
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:focusableInTouchMode="true"
-            android:id="@+id/explore_community_billboard_recyclerview"
-            tools:listitem="@layout/explore_community_billboard_item"/>
+
 
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:nestedScrollingEnabled="false"
-            android:layout_marginTop="5dp"
-            tools:listitem="@layout/explore_community_recyclerview_type3_bucket"
+            tools:listitem="@layout/explore_community_recyclerview_type4_bucket"
             android:id="@+id/explore_community_main_recycler_view"/>
 
     </LinearLayout>
-</androidx.core.widget.NestedScrollView>
