--- a/app/src/main/res/layout/explore_community_recyclerview_type2_bucket.xml
+++ b/app/src/main/res/layout/explore_community_recyclerview_type2_bucket.xml
@@ -3,12 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
+    android:layout_marginLeft="5dp"
+    android:layout_marginRight="5dp"
     android:layout_width="match_parent"
-    android:layout_height="430dp">
+    android:layout_height="440dp">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="415dp"
+        android:layout_height="425dp"
         app:cardElevation="0dp">
         <LinearLayout
             android:layout_width="match_parent"
@@ -20,37 +22,49 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="10dp"
+                android:layout_marginBottom="5dp"
                 android:orientation="horizontal"
                 android:weightSum="4">
 
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="3"
-                    android:textSize="17dp"
+                    android:layout_weight="2.8"
+                    android:textSize="16dp"
                     android:maxLines="1"
                     android:ellipsize="end"
                     android:layout_marginRight="20dp"
                     android:textColor="@color/blue"
-                    android:fontFamily="@font/sourcesemi"
-                    android:text="#AncientGreekDemocracy"
+                    android:fontFamily="@font/opensansbold"
+                    android:text="#AncientBritishSystemOfGovernment"
                     android:gravity="center|left"/>
 
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="30dp"
                     android:background="@drawable/rectangle_transparent_background"
-                    android:orientation="vertical"
+                    android:orientation="horizontal"
                     android:gravity="center"
-                    android:layout_marginTop="8dp"
-                    android:layout_weight="1">
+                    android:paddingLeft="5dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_weight="1.2">
                     <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:text="Learn More"
+                        android:layout_gravity="center"
                         android:textSize="13dp"
                         android:textColor="@color/dark_text_color"
                         android:gravity="center"/>
+                    <ImageView
+                        android:layout_width="15dp"
+                        android:layout_height="15dp"
+                        android:rotation="180"
+                        android:layout_marginTop="1dp"
+                        android:layout_gravity="center"
+                        android:tint="@color/dark_text_color"
+                        android:src="@drawable/iconfinder_chevron_left"/>
+
 
                 </LinearLayout>
             </LinearLayout>
@@ -65,11 +79,4 @@
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0.5dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="10dp"
-        android:background="@color/light_grey"/>
 </LinearLayout>
