--- a/app/src/main/res/layout/explore_community_featured_item_tag.xml
+++ b/app/src/main/res/layout/explore_community_featured_item_tag.xml
@@ -1,47 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
-    android:layout_width="100dp"
-    android:layout_height="30dp">
+    android:gravity="center"
+    android:layout_width="match_parent"
+    android:layout_height="30dp"
+    android:weightSum="5">
 
-
-
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="0.3"/>
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:orientation="horizontal"
-            android:weightSum="4">
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:gravity="center">
 
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1">
-
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center"
-                    android:padding="3dp"
-                    android:src="@drawable/star_filled"
-                    android:tint="#EC910C" />
-
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="3">
 
                 <TextView
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:fontFamily="@font/airsemi"
-                    android:gravity="center|left"
+                    android:fontFamily="@font/airreg"
+                    android:gravity="center"
                     android:text="Featured"
+                    android:layout_gravity="center"
                     android:layout_marginTop="2dp"
                     android:layout_marginLeft="2dp"
                     android:textColor="@color/colorPrimary"
-                    android:textSize="15dp" />
-            </LinearLayout>
+                    android:textSize="14dp" />
         </LinearLayout>
+    <View
+        android:layout_width="0dp"
+        android:layout_height="0.5dp"
+        android:background="@color/light_grey"
+        android:layout_weight="3.7"/>
+
 </LinearLayout>
