--- a/app/src/main/res/layout/activity_main_content.xml
+++ b/app/src/main/res/layout/activity_main_content.xml
@@ -18,9 +18,12 @@
             app:contentInsetLeft="0dp"
             app:contentInsetStart="0dp"
             app:contentInsetRight="0dp"
-            app:contentInsetEnd="0dp"
-            android:background="@color/colorPrimary">
+            app:contentInsetEnd="0dp">
 
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:cardBackgroundColor="@color/white">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="80dp"
@@ -38,7 +41,7 @@
                         android:layout_height="40dp"
                         android:padding="10dp"
                         android:layout_gravity="center|bottom"
-                        android:tint="@color/white"
+                        android:tint="@color/colorPrimary"
                         android:src="@drawable/newsearchicon"/>
                 </LinearLayout>
 
@@ -58,7 +61,7 @@
                         android:fontFamily="@font/airsemi"
                         android:gravity="center"
                         android:text="Explore"
-                        android:textColor="#ffffff"
+                        android:textColor="@color/colorPrimary"
                         android:textSize="20dp" />
                 </LinearLayout>
 
@@ -83,6 +86,7 @@
                         fresco:placeholderImageScaleType="fitXY"/>
                 </LinearLayout>
             </LinearLayout>
+            </androidx.cardview.widget.CardView>
         </androidx.appcompat.widget.Toolbar>
 
         <FrameLayout
