--- a/app/src/main/res/layout/explore_community_recyclerview_type2_bucket.xml
+++ b/app/src/main/res/layout/explore_community_recyclerview_type2_bucket.xml
@@ -72,6 +72,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 app:spanCount="3"
+                android:nestedScrollingEnabled="false"
                 android:id="@+id/explore_community_type2_recyclerview"
                 app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                 tools:listitem="@layout/explore_community_recyclerview_type2_item"
