--- a/app/src/main/res/layout/explore_community_recyclerview_type4_bucket.xml
+++ b/app/src/main/res/layout/explore_community_recyclerview_type4_bucket.xml
@@ -18,6 +18,7 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:nestedScrollingEnabled="false"
                 android:id="@+id/explore_community_type4_recyclerview"
                 app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                 tools:listitem="@layout/explore_community_recyler_type4_item"
