channel video player Impl

--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -1,117 +1,149 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@drawable/gradienttype1"
     tools:context=".Welcome">
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/uni1"
+        android:elevation="1dp"
+        android:scaleType="centerCrop"
+        android:id="@+id/welcome_background_image"/>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#00000000"
-        android:gravity="center">
-        <TextView
-            android:layout_width="250dp"
-            android:layout_height="50dp"
-            android:gravity="center"
-            android:textSize="22dp"
-            android:fontFamily="@font/opensansbold"
-            android:textColor="@color/colorPrimary"
-            android:layout_marginTop="20dp"
-            android:text="Estello"/>
-    </LinearLayout>
+        android:layout_height="match_parent"
+        android:background="#90000000"
+        android:elevation="2dp"/>
 
-
-    <com.estello.android.ViewModel.AutoScrollViewPager
-        android:id="@+id/welcome_pager"
-        android:layout_width="match_parent"
-        android:layout_height="250dp"
-        android:layout_marginTop="20dp"/>
-
-  <com.google.android.material.card.MaterialCardView
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:id="@+id/welcome_card"
-      app:cardBackgroundColor="#00000000"
-      app:cardElevation="5dp">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:gravity="center|top">
-        <com.rd.PageIndicatorView
-            android:id="@+id/pageIndicatorView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            app:piv_animationType="scale"
-            android:layout_marginTop="20dp"
-            app:piv_dynamicCount="true"
-            app:piv_radius="3dp"
-            app:piv_interactiveAnimation="true"
-            app:piv_selectedColor="#fa2d65"
-            app:piv_unselectedColor="#c8c8c8"
-            app:piv_viewPager="@id/welcome_pager"/>
+        android:elevation="3dp"
+        android:weightSum="6">
 
-      <TextView
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:textSize="26dp"
-          android:gravity="center"
-          android:fontFamily="@font/sourcesemi"
-          android:id="@+id/welcome_slide_title"
-          android:text="Acquire New Skill"
-          android:layout_marginTop="20dp"
-          android:textColor="#000000"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="3"
+            android:orientation="vertical">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:textSize="60dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:lineSpacingExtra="5dp"
+                android:fontFamily="@font/kumelianbold"
+                android:text="Explore\nYour\nCreativity"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:lineSpacingExtra="4dp"
+                android:textSize="24dp"
+                android:layout_marginTop="20dp"
+                android:textColor="@color/white"
+                android:fontFamily="@font/airreg"
+                android:text="Join Estello to watch, play, learn, make and discover."/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:orientation="vertical"
+            android:gravity="center"
+            android:layout_weight="2">
+
+
+
+
+    <LinearLayout
+        android:id="@+id/signin_with_google_layout"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:layout_marginTop="50dp"
+        android:background="@drawable/google_sign_in_background"
+        android:gravity="center"
+        android:weightSum="4"
+        android:orientation="horizontal">
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:gravity="center"
+            android:layout_height="match_parent"
+            android:layout_weight="1">
+
+            <ImageView
+                android:layout_width="24dp"
+                android:layout_height="28dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:src="@drawable/google" />
+        </LinearLayout>
 
 
         <TextView
-            android:id="@+id/welcome_slide_exp"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="15dp"
-            android:layout_marginLeft="40dp"
-            android:layout_marginRight="40dp"
-            android:layout_marginTop="10dp"
-            android:fontFamily="@font/sourcereg"
-            android:gravity="top|center"
-            android:minHeight="80dp"
-            android:padding="5dp"
-            android:text="ok i now know you better grow your skill to a whole new level UpSkill grow your skill to a whole new level "
-            android:textColor="#A5A4A4"
-            android:textSize="18dp" />
-
-
-
-         <com.google.android.material.button.MaterialButton
-             android:layout_width="match_parent"
-             android:layout_height="53dp"
-             android:id="@+id/welcome_slide_create_account"
-             android:layout_marginLeft="40dp"
-             android:textAllCaps="false"
-             android:textSize="18dp"
-             android:layout_marginRight="40dp"
-             android:text="Create New Account"
-             android:fontFamily="@font/sourcereg"
-             android:textColor="@color/White"/>
-
-      <TextView
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:text="Log In"
-          android:id="@+id/welcome_slide_login"
-          android:gravity="center"
-          android:fontFamily="@font/sourcereg"
-          android:layout_marginTop="10dp"
-          android:textColor="@color/colorAccent"
-          android:textSize="18dp"/>
-
-
-
-
+            android:fontFamily="@font/airreg"
+            android:text="Continue with Google"
+            android:layout_weight="3"
+            android:textColor="@color/blue"
+            android:textSize="17dp" />
     </LinearLayout>
-  </com.google.android.material.card.MaterialCardView>
-</LinearLayout>
+            <LinearLayout
+                android:id="@+id/signin_with_facebook_layout"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
+                android:layout_marginTop="15dp"
+                android:background="@drawable/google_sign_in_background"
+                android:gravity="center"
+                android:weightSum="4"
+                android:backgroundTint="@color/blue"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:gravity="center"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1">
+
+                    <ImageView
+                        android:layout_width="24dp"
+                        android:layout_height="28dp"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="10dp"
+                        android:tint="@color/white"
+                        android:src="@drawable/facebooklogo" />
+                </LinearLayout>
+
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/airreg"
+                    android:text="Sign in with facebook"
+                    android:layout_weight="3"
+                    android:textColor="@color/white"
+                    android:textSize="17dp" />
+            </LinearLayout>
+
+        </LinearLayout>
+        </LinearLayout>
+</FrameLayout>
