--- a/app/src/main/res/layout/explore_community_recyclerview_type1_bucket.xml
+++ b/app/src/main/res/layout/explore_community_recyclerview_type1_bucket.xml
@@ -46,6 +46,7 @@
             android:orientation="horizontal"
             android:gravity="center"
             android:paddingLeft="5dp"
+            android:id="@+id/explore_community_type1_more"
             android:layout_marginTop="10dp"
             android:layout_weight="0.8">
             <TextView
