--- a/app/src/main/res/layout/explore_community_type2_recyclerview_item_type_details.xml
+++ b/app/src/main/res/layout/explore_community_type2_recyclerview_item_type_details.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_marginLeft="5dp"
     android:layout_marginRight="5dp"
-    android:layout_marginTop="2dp"
     android:layout_marginBottom="20dp"
     android:layout_height="170dp">
     <androidx.cardview.widget.CardView
@@ -20,10 +19,10 @@
             android:orientation="vertical">
             <ImageView
                 android:layout_width="match_parent"
-                android:layout_height="100dp"
+                android:layout_height="150dp"
                 android:scaleType="centerCrop"
                 android:id="@+id/explore_courses_image"
-                android:src="@drawable/ucas1"/>
+                android:src="@drawable/ucas"/>
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
@@ -50,7 +49,7 @@
         android:fontFamily="@font/airreg"
         android:gravity="center"
         android:maxLines="1"
-        android:text="60k Members"
+        android:text="120k Posts"
         android:textColor="#5A5A5A"
         android:textSize="13dp" />
 </com.estello.android.ViewModel.ExploreCommunityGridViewItem>
