--- a/app/src/main/res/layout/activity_organisation_profile.xml
+++ b/app/src/main/res/layout/activity_organisation_profile.xml
@@ -7,7 +7,7 @@
     android:fitsSystemWindows="true"
     android:background="@color/white"
     android:padding="0dp"
-    tools:context=".course_details">
+    tools:context=".CourseDetails">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/course_details_app_bar"
