--- a/app/src/main/res/layout/activity_personal_profile_page.xml
+++ b/app/src/main/res/layout/activity_personal_profile_page.xml
@@ -7,7 +7,7 @@
     android:fitsSystemWindows="true"
     android:background="#FDF9FD"
     android:padding="0dp"
-    tools:context=".course_details">
+    tools:context=".CourseDetails">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/profile_page_app_bar"
