--- a/app/src/main/res/layout/activity_specialization_course_details.xml
+++ b/app/src/main/res/layout/activity_specialization_course_details.xml
@@ -7,7 +7,7 @@
     android:fitsSystemWindows="true"
     android:background="@color/white"
     android:padding="0dp"
-    tools:context=".course_details">
+    tools:context=".CourseDetails">
 
     <com.google.android.material.button.MaterialButton
         android:layout_width="match_parent"
