--- a/app/src/main/res/layout/course_training_welcome_content.xml
+++ b/app/src/main/res/layout/course_training_welcome_content.xml
@@ -7,7 +7,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".course_details"
+    tools:context=".CourseDetails"
     tools:showIn="@layout/course_training_welcome_content">
 
 
