--- a/app/src/main/res/layout/weeks_tab_indicator_layout.xml
+++ b/app/src/main/res/layout/weeks_tab_indicator_layout.xml
@@ -1,12 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-    <com.google.android.material.card.MaterialCardView
+    <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="90dp"
         android:layout_height="40dp"
-        app:cardCornerRadius="20dp"
-        android:layout_marginTop="10dp"
-        app:cardElevation="1dp"
-        android:layout_marginLeft="10dp"
-        app:cardBackgroundColor="#12043C">
-    </com.google.android.material.card.MaterialCardView>
+        android:layout_marginTop="10dp">
+    </LinearLayout>
